Apply Obsever API for infinite scroll

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -12,7 +12,7 @@
     margin: 0 auto;
     background-color: #fff;
     &__logo{
-        color: rgb(69, 69, 185);
+        color: #4545b9;
         font-size: 20px;
         font-weight: 900;
     }
