--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,16 +1,23 @@
 .header{
     height: 100px;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
     position: fixed;
     left: 0;
     right: 0;
     top: 0;
     max-width: 1140px;
-    width: 92%;
+    width: 100%;
+    padding: 0 10px;
     margin: 0 auto;
     background-color: #fff;
+    &__content{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    
+        width: 95%;
+        margin: 0 auto;
+    }
     &__logo{
         color: #4545b9;
         font-size: 20px;
@@ -19,6 +26,18 @@
     nav {
         display: flex;
         gap: 5px;
+    }
+    .btn{
+        border-radius: 5px;
+        border: 1px #ccc solid;
+        padding: 5px 10px;
+        margin: 0 5px;
+        cursor: pointer;
+        color: rgb(44, 44, 44);
+        background-color: #e6e6e6;
+        &:hover{
+            background-color: #dbdbdb;
+        }
     }
 }
 
