--- a/src/Components/LoginPage/LoginPage.scss
+++ b/src/Components/LoginPage/LoginPage.scss
@@ -30,6 +30,7 @@
         margin-bottom: 20px;
         width: 100%;
         border-radius: 10px;
+        font-weight: bold;;
         border: none;
         cursor: pointer;
     }
