Make test adjustments

--- a/src/Components/LoginPage/LoginPage.scss
+++ b/src/Components/LoginPage/LoginPage.scss
@@ -11,6 +11,7 @@
         box-shadow: 2px 5px 20px rgba(0, 0, 0, 0.1);
         &__title{
             text-align: center;
+            display: block;
         }
     }
 }
